--- a/ddug_geonode/templates/site_index.html
+++ b/ddug_geonode/templates/site_index.html
@@ -4,16 +4,14 @@
 This is where you can override the hero area block. You can simply modify the content below or replace it wholesale to meet your own needs. 
 {% endcomment %}
   {% block hero %}
-  <div class="jumbotron">
-    <div class="container">
-      <h1>{% trans "Welcome" %}</h1>
-      <p>{% blocktrans %}GeoNode is an open sourced platform for sharing geospatial data and maps.{% endblocktrans %}</p>
-      <p>{% blocktrans %}If you have any questions about the software or service, join our <a href="https://groups.google.com/d/forum/geonode-users">mailing list</a>.{% endblocktrans %}</p>
-      <span>{% trans 'Need help?' %} <a href="http://docs.geonode.org/en/latest/tutorials/users/quickstart/index.html">{% trans 'Getting Started' %}</a></span>
-    </div>
-  </div>
+
   {% endblock %}
 
-  {% block extra_head %}
-       <link href="{{ STATIC_URL }}css/bootstrap.css" rel="stylesheet"/>
-   {% endblock %}
+{% block extra_head %}
+
+<link href="{{ STATIC_URL }}css/bootstrap.css" rel="stylesheet"/>
+
+<link href="{{ STATIC_URL }}css/site_base.css" rel="stylesheet"/>
+{% endblock %}
+
+
