added google analytics

--- a/ddug_geonode/templates/base.html
+++ b/ddug_geonode/templates/base.html
@@ -40,6 +40,16 @@
     <link rel="shortcut icon" href="{{ STATIC_URL }}img/favicon.png" type="image/png">
     {# <link rel="shortcut icon" href="/images/icons/ckan.ico" /> #}
     <link rel="search" type="application/opensearchdescription+xml" href="/catalogue/opensearch" title="GeoNode Search"/>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-99330798-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
   {# NewHead stop #}    
     
   </head>
